# sppr

./: CMakeLists.txt  README.md
application/: main.cpp  mainwindow.cpp  mainwindow.h
